# desktop-qt

./: AGENTS.md  CMakeLists.txt  Main.qml  SettingsScreen.qml  main.cpp  plan.md
i18n/: en.json  tr.json
src/api/: ApiClient.cpp  ApiClient.h
src/i18n/: TranslationManager.cpp  TranslationManager.h
talimatlar/: API.md  README.md  openapi.json
